@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-03T08:16:57Z",
-  "count_outdated" : 369,
-  "uniques_outdated" : 212,
+  "timestamp" : "2022-07-03T16:19:04Z",
+  "count_outdated" : 370,
+  "uniques_outdated" : 213,
   "count" : 396,
   "uniques" : 229,
   "clones" : [
-    {
-      "timestamp": "2022-06-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-20T00:00:00Z",
       "count": 2,
