@@ -1,12 +1,7 @@
 {
-  "count": 27,
+  "count": 26,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-06-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-06-20T00:00:00Z",
       "count": 2,
